# src/user-location/dto/update-user-location.dto.ts
@@ -1,0 +1,4 @@
+import { PartialType } from '@nestjs/swagger';
+import { CreateUserLocationDto } from './create-user-location.dto';
+
+export class UpdateUserLocationDto extends PartialType(CreateUserLocationDto) {}
